--- a/trunk/themes/digressit-default/style.css
+++ b/trunk/themes/digressit-default/style.css
@@ -208,6 +208,7 @@ h1, h2, h3, h4, h5, h6{
 
 #live-content-search, #live-comment-search, .search-result{
 	width: 150px;
+	color: #aaa;
 }
 
 
@@ -398,6 +399,10 @@ z-index:0;
 	width:40px;
 }
 
+#dynamic-sidebar{
+	border: 1px solid #ccc;	
+}
+
 .single #content, .page #content{
 	background-color:white;
 	border-color:#BDBDBD;
@@ -413,7 +418,7 @@ z-index:0;
 	background-color:white;
 	border-color:#BDBDBD;
 	border-style:solid;
-	border-width:0 0px;
+	border-width:0 1px;
 	margin:0 auto;
 	width:1000px;	
 	-moz-box-shadow:0 25px 30px #AAAAAA;
