--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -794,7 +794,6 @@ background:  none;
 	width:250px;
 	z-index:100;
 	border-style:solid;
-	border-width:0 2px 0 0;
 	height:100%;
 /*	-moz-box-shadow: 0 0 1em #AAAAAA */
 
@@ -906,6 +905,7 @@ ul{
 
 .sidebar{
 	padding-top: 10px;
+	border: 0px;
 }
 .sidebar .sidebar-item {
 	margin-left:-20px;
@@ -963,11 +963,15 @@ ul{
 }
 
 
+.in-moderation{
+	opacity: .50;
+}
+
 #toplevel-commentbox{
 	display: none;
 }
 .single #content, .page #content{
-	padding-bottom: 150px;
+	padding-bottom: 20px;
 }
 #comments-toolbar #comment{
 	height: 20px;
@@ -2022,6 +2026,7 @@ display:none;
 	margin:auto;
 	max-width:1000px;
 	min-height:600px;
+	position: relative;
 }
 
 
