--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -433,15 +433,19 @@ div#pimped.bubble cite.rounded {
 
 
 .edit-this{
+    display: inline;
+    margin-left: 10px;
+    right: 20px;
+    top: 15px;
+}
+
+
+.edit-this a{
     background-color: #EEEEEE;
-    border-radius: 2px 2px 2px 2px;
-    font-size: 10px;
-    height: 14px;
-    margin: 0;
-    padding: 2px;
-    position: absolute;
-    right: 0;
-    top: 1px;
+    border-radius: 5px 5px 5px 5px;
+    font-size: 50%;
+    padding: 0 11px;
+    text-transform: uppercase;
 }
 
 
