--- a/trunk/core/css/core.css
+++ b/trunk/core/css/core.css
@@ -284,101 +284,15 @@ div#pimped.bubble cite.rounded {
 }
 
 
-/* =Menu
--------------------------------------------------------------- */
-
-#menu-primary {
-/*	background: #222; */ /* Show a solid color for older browsers */
-/*	background: -moz-linear-gradient(#252525, #0a0a0a);
-	background: -o-linear-gradient(#252525, #0a0a0a);
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#252525), to(#0a0a0a)); */ /* older webkit syntax */
-/*	background: -webkit-linear-gradient(#252525, #0a0a0a);
-
-	-webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-	-moz-box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-	box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-*/	
-	clear: both;
-	display: block;
+#menu-primary li{
 	float: left;
-	margin: 0 auto 6px;
-	width: 100%;
-}
-#menu-primary ul {
-	font-size: 15px;
 	list-style: none;
-	margin: 0 0 0 -0.8125em;
-	padding-left: 0;
-	margin-left: 10px;
-}
-#menu-primary li {
-	float: left;
-	position: relative;
-	list-style: none;
-}
-#menu-primary a {
-	color: #111;
-	display: block;
-	line-height: 2.333em;
-	padding: 0 1.2125em;
-	text-decoration: none;
-}
-#menu-primary ul ul {
-	-moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-	-webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-	box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-	display: none;
-	float: left;
-	margin: 0;
-	position: absolute;
-	top: 2.333em;
-	left: 0;
-	width: 188px;
-	z-index: 99999;
-}
-#menu-primary ul ul ul {
-	left: 100%;
-	top: 0;
-}
-#menu-primary ul ul a {
-	background: #f9f9f9;
-	border-bottom: 1px dotted #ddd;
-	color: #444;
-	font-size: 13px;
-	font-weight: normal;
-	height: auto;
-	line-height: 1.4em;
-	padding: 10px 10px;
-	width: 168px;
-}
-#menu-primary li:hover > a,
-#menu-primary ul ul :hover > a,
-#menu-primary a:focus {
-	background: #efefef;
-}
-#menu-primary li:hover > a,
-#menu-primary a:focus {
-	background: #f9f9f9; /* Show a solid color for older browsers */
-	background: -moz-linear-gradient(#f9f9f9, #e5e5e5);
-	background: -o-linear-gradient(#f9f9f9, #e5e5e5);
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f9f9f9), to(#e5e5e5)); /* Older webkit syntax */
-	background: -webkit-linear-gradient(#f9f9f9, #e5e5e5);
-	color: #373737;
-
-	-webkit-box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-	-moz-box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-	box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px;
-
-}
-#menu-primary ul li:hover > ul {
-	display: block;
-}
-#menu-primary .current_page_item > a,
-#menu-primary .current_page_ancestor > a {
-	font-weight: bold;
+	margin: 0 5px;
 }
 
-
+.site-title h1{
+	padding: 10px;
+}
 /************ LIGHTBOX INTERFACE *************/
 
 
